<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.softa</groupId>
        <artifactId>softa-parent</artifactId>
        <version>2.1.4</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <name>Softa Framework</name>
    <artifactId>framework</artifactId>
    <description>Framework components</description>
    <url>https://softa.io</url>
    <packaging>pom</packaging>

    <properties>
        <java.version>25</java.version>
    </properties>

    <modules>
        <module>softa-base</module>
        <module>softa-orm</module>
        <module>softa-web</module>
    </modules>
</project>